# applied_genai_notebooks

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.static  README.md  export_and_clean.py  filter_notebooks.py  mkdocs.yml  pyproject.toml  railway.json
docs/: Module_1_Practical_1_Probability.py  index.md  pyproject.toml  running_locally.md
exports/: Module_10_ReinforcementLearningAndLLM.html  Module_12_Practical_Music_Transformer.html  Module_1_Practical_1_Probability.html  Module_1_Practical_2_Word_Sampling.html  Module_1_Practical_3_Word_Embeddings.html  Module_3_Practical_1_FCNN.html  Module_3_Practical_2_Convolutions.html  Module_3_Practical_3_CNN.html  Module_5_Practical_1_GAN.html  Module_5_Practical_2_RNN.html  Module_7_Practical_1_EnergyBasedMethods.html  Module_7_Practical_2_DiffusionMethods.html  Module_7_Practical_3_SafeDiffuser.html  Module_8_Practical_GPT.html  Module_9_Practical_ReinforcementLearning.html  index.html
html_notebooks/: Module_10_Practical_ReinforcementLearning.html  Module_10_ReinforcementLearningAndLLM.html  Module_11_ReinforcementLearningAndLLM.html  Module_1_Practical_1_Probability.html  Module_1_Practical_2_Word_Sampling.html  Module_1_Practical_3_Word_Embeddings.html  Module_1_Practical_3_Word_Embeddings_Orig.html  Module_2_Practical_1_Probability.html  Module_2_Practical_2_Word_Sampling.html  Module_2_Practical_3_Word_Embeddings.html  Module_2_Practical_3_Word_Embeddings_Orig.html  Module_3_Practical_1_FCNN.html  Module_3_Practical_2_Convolutions.html  Module_3_Practical_3_CNN.html  Module_4_Practical_1_FCNN.html  Module_4_Practical_2_Convolutions.html  Module_4_Practical_3_CNN.html  Module_4_Practical_VAE.html  Module_5_Practical_1_GAN.html  Module_5_Practical_2_RNN.html  Module_5_Practical_GAN.html  Module_5_Practical_VAE.html  Module_6_Practical_1_GAN.html  Module_6_Practical_1_NormalizingFlows.html  Module_6_Practical_2_RNN.html  Module_6_Practical_GAN.html  Module_7_Practical_1_EnergyBasedMethods.html  Module_7_Practical_1_NormalizingFlows.html  Module_7_Practical_2_DiffusionMethods.html  Module_7_Practical_3_SafeDiffuser.html  Module_7_Practical_DiffusionMethods.html  Module_7_Practical_RNN.html  Module_8_Practical_1_EnergyBasedMethods.html  Module_8_Practical_GPT.html  (+6 more)
(+157 files in other folders)
