[project]
name = "applied-genai-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "gdown>=5.2.0",
    "jupyter>=1.1.1",
    "marimo>=0.13.15",
    "matplotlib>=3.10.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocs-pdf-export-plugin>=0.5.10",
    "mofresh>=0.2.2",
    "nltk>=3.9.1",
    "numpy>=2.3.0",
    "pip>=25.2",
    "polars>=1.32.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
]
